@@ -1,3 +1,9 @@
+Thu Jul 31 11:36:53 GMT 2003 Jim Segrave <jes@jes-2.demon.nl>
+
+	* rollout.c - prevent division by zero when jsds are small. This
+          time it actually should do something
+	* set.c - missing space in option description
+	
 Wed Jul 30 09:36:07 GMT 2003 Jim Segrave <jes@jes-2.demon.nl>
 
 	* rollout.c - prevent division by zero when jsds are small
